# bulls-pipeline

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  manage_project_files.py  pyproject.toml  requirements.txt  run.py  tools.py
docs/: GWAS.md  Git.md  Imputation.md  Linux.md  Note.md  VCF.md  uv.md
docs/dev/: git.md  linux.md  uv.md
info/: form_vcf.py
notebooks/: analysis.ipynb  gwas_pre_analyze.ipynb  test.ipynb
notebooks/archive/: DR2_location_and_accuracy2.ipynb  breed_counts.csv  cluster_0_samples.txt  cluster_1_samples.txt  clusters.csv  final_anylyzes.ipynb  gwas.ipynb  info.ipynb  merge_df  phenotypes_info.ipynb  ref_panel_info.ipynb  test_run.ipynb  tools_bash_test.ipynb
notebooks/archive/genetic_maps/: chr1.map  chr10.map  chr11.map  chr12.map  chr13.map  chr14.map  chr15.map  chr16.map  chr17.map  chr18.map  chr19.map  chr2.map  chr20.map  chr21.map  chr22.map  chr23.map  chr24.map  chr25.map  chr26.map  chr27.map  chr28.map  chr29.map  chr3.map  chr4.map  chr5.map  chr6.map  chr7.map  chr8.map  chr9.map
src/: main.py
src/config/: config.py  schema.py
src/engine/: convert_genetic_maps.py  initial_prepare_data.py
src/preprocessing/: main.py  manage_project_files.py  tools.py  tools_bash.py  tools_ensembl.py  tools_genome.py
src/preprocessing_data/: conver_genetic_maps.py
src/script/: project_preparation.sh  publish_data_huggingface.py  test_download_data_huggingface.py  test_project_preparation.sh
src/tools/: conver_genetic_maps.py
src/utils/: file_pool.py  fingerprint.py
tests/: 001_simple_test.py
tests/data/phenotype/: phenotype_all.csv
tests/preparation_data/: download_data_huggingface.py  prepare_test_data.ipynb  project_preparation.sh  publish_data_huggingface.py  test_data_FinalReport.txt  test_data_SNPMap.txt  test_data_SampleMap.txt  test_data_res_SNPMap.txt  test_data_res_SampleMap.txt
tests/preparation_data/data/: test_data_FinalReport.txt  test_data_SNPMap.txt
tests/preparation_data/example/: test_data_res_FinalReport.txt
tests/results/vcf/: merged.vcf.gz.tbi  merged_plink.bed  merged_plink.bim  merged_plink.fam  merged_plink.nosex  vcf_file_list.txt
tests/results/vcf/separate/test_data_res_FinalReport.txt.gz/: SAMPLE0.vcf  SAMPLE0.vcf.gz.csi  SAMPLE1.vcf  SAMPLE1.vcf.gz.csi  SAMPLE10.vcf  SAMPLE10.vcf.gz.csi  SAMPLE11.vcf  SAMPLE11.vcf.gz.csi  SAMPLE12.vcf  SAMPLE12.vcf.gz.csi  SAMPLE13.vcf  SAMPLE13.vcf.gz.csi  SAMPLE14.vcf  SAMPLE14.vcf.gz.csi  SAMPLE15.vcf  SAMPLE15.vcf.gz.csi  SAMPLE16.vcf  SAMPLE16.vcf.gz.csi  SAMPLE2.vcf  SAMPLE2.vcf.gz.csi  SAMPLE3.vcf  SAMPLE3.vcf.gz.csi  SAMPLE4.vcf  SAMPLE4.vcf.gz.csi  SAMPLE5.vcf  SAMPLE5.vcf.gz.csi  SAMPLE6.vcf  SAMPLE6.vcf.gz.csi  SAMPLE7.vcf  SAMPLE7.vcf.gz.csi  SAMPLE8.vcf  SAMPLE8.vcf.gz.csi  SAMPLE9.vcf  SAMPLE9.vcf.gz.csi
