[project]
name = "bulls-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pysam>=0.24.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
    "scikit-learn>=1.7.2",
]
[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
[tool.ty.environment]
python-version = "3.10"
[tool.ty.rules]
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore" 


