[project]
name = "bulls-pipeline"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pysam>=0.24.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "statannotations>=0.7.2",
    "pyarrow>=24.0.0",
    "pandas-plink>=2.2.9", # Работа с bed
    "lxml>=6.1.1", # Чтение таблиц из html
    "html5lib>=1.1", # Чтение таблиц из html
    "mygene>=3.2.2", # Доступ к базам данных
    "pydantic>=2.13.4", # Валидация конфигов и прочего
]
[dependency-groups]
dev = [
    "huggingface-hub>=1.17.0", # Загружать публичные данные
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.42",
    "uv>=0.11.16",
]
[tool.ty.environment]
python-version = "3.10"
[tool.ty.rules]
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
[tool.pytest.ini_options]
addopts = [
    "-p no:cacheprovider", # Не создавать кэш
]
testpaths = ["tests"] # Искать тесты в папке tests
python_files = ["*_test.py", "*_tests.py"] # 001_simple_test.py
